--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </p>
         <a href="#projects" class="cta-btn">✨ Explore My Work</a>
         <div class="social-links">
-          <a href="github.com/SWAYAM31220" target="_blank">GitHub</a>
-          <a href="linkedin.com/in/swayamsujjal" target="_blank">LinkedIn</a>
-          <a href="instagram.com/__s.w.a.y.a.m__" target="_blank">Instagram</a>
+          <a href="https://github.com/SWAYAM31220" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/swayamsujjal" target="_blank">LinkedIn</a>
+          <a href="https://instagram.com/__s.w.a.y.a.m__" target="_blank">Instagram</a>
         </div>
       </section>
       
